--- a/app/views/assets/_asset_buttons.html.erb
+++ b/app/views/assets/_asset_buttons.html.erb
@@ -46,7 +46,41 @@
     <% end -%>
 <% end -%>
 
-<%= admin_dropdown do %>
+<% if asset.can_edit? %>
+  <% edit_verb = asset.can_manage? ? 'manage' : 'edit' %>
+  <% if asset.versioned? -%>
+    <% if asset.new_version_supported? %>
+      <%= link_to_function image("new")+" Upload new version", visual_effect(:toggle_appear, "upload_new_version_form"), class: "btn btn-default" %>
+    <% else %>
+      <%= link_to_function image("new")+" Upload new version", nil,disabled:true, class:'btn btn-default'%>
+    <% end %>
+  <% end %>
+  <% if asset.is_a?(Document) %>
+    <%#= link_to_function image("edit")+" Edit sharing", visual_effect(:toggle_appear, "sharing_form"), class: "btn btn-default" %>
+  <% end %>
+  <%= button_link_to("#{edit_verb.capitalize} #{human_name}", edit_verb, polymorphic_path(asset, :action=>:edit)) %>
+<% end %>
+
+<% if asset.is_in_isa_publishable? && asset.can_publish? -%>
+  <%= button_link_to("Publish #{human_name}", 'publish', polymorphic_path(asset, :action=> :check_related_items ), {:method=>:post} ) %>
+<% end -%>
+
+<% if asset.can_delete?(current_user) %>
+  <%= button_link_to("Delete #{human_name}", 'destroy', url_for(asset), { data: { confirm: 'Are you sure?' }, method: :delete }  ) %>
+<% elsif asset.can_manage?(current_user) %>
+  <% explanation = unable_to_delete_text(asset) %>
+  <a data-tooltip='<%= "#{tooltip(explanation)}" -%>' class="btn btn-default" onclick = 'javascript:alert(<%= "\"#{explanation}\"" -%>)' href="#" data-original-title="" title="">
+    <%= image('destroy', alt: 'Delete', class: 'disabled') %>
+    Delete <%= human_name %>
+  </a>
+<% end %>
+
+<% if asset.supports_doi? && asset.is_published? && asset.can_manage? && display_asset.can_mint_doi? %>
+  <%= button_link_to("Publish #{human_name}", 'publish', polymorphic_path(asset, :action=> :check_related_items ), {:method=>:post} ) %>
+  <%= image_tag_for_key('doi', polymorphic_path(asset, :action => 'mint_doi_confirm', :version => display_asset.version), nil,{},"Generate a DOI") -%>
+<% end %>
+
+<% if false %> <%#= admin_dropdown do %>
     <% edit_verb = asset.can_manage? ? 'manage' : 'edit' %>
 
     <% if asset.can_edit? -%>
