--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,4 +1,5 @@
 <% if Seek::Config.about_page_enabled %>
+    <%= image('aboutimg', {width: "100%", class: "rounded"} ) -%>
     <%= about_text %>
 <% else %>
     <h4>About page is disabled</h4>
