--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
   <%= seek_javascript_tags %>
 
   <link href="#data" type="application/json" rel="exhibit-data" />
+  <!-- IDEA number one: <link rel="stylesheet" href="assets/new-colors.css"/> -->
+
 </head>
 
 <body id="body">
