--- a/app/views/layouts/navbar/_browse_menu.html.erb
+++ b/app/views/layouts/navbar/_browse_menu.html.erb
@@ -4,7 +4,7 @@
     <span class="hidden-md">Discover</span>
     <span class="caret"></span>
   </a>
-  <ul class="dropdown-menu" role="menu">
+  <ul class="dropdown-menu" role="menu" style="width:150%;">
     <!-- <li role="presentation" class="dropdown-header visible-md">Browse</li>
     <li role="presentation" class="dropdown-header"><%# <%= t("menu.yellow_pages") - %></li>-->
     <li> 
@@ -47,6 +47,7 @@
         Documents
       </a>
     </li>
+    <li role="presentation" class="divider"></li>
     <li> 
       <a href="<%= new_advanced_search_path %>">
         <span style = "float:left; margin-right:5px;">
