--- a/app/views/layouts/navbar/_create_menu.html.erb
+++ b/app/views/layouts/navbar/_create_menu.html.erb
@@ -5,23 +5,57 @@
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
-    <!-- <li role="presentation" class="dropdown-header visible-md">Create</li>
-    <li role="presentation" class="dropdown-header"><%#= t("menu.yellow_pages") -%></li> -->
+    <li role="presentation" class="dropdown-header">Create</li>
+    <!--<li role="presentation" class="dropdown-header"><%#= t("menu.yellow_pages") -%></li>
+    <li> 
+      <a href="<%#= new_project_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%#= image('project', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        Project 
+      </a>
+    </li> -->
+    <li> 
+      <a href="<%= new_institution_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%= image('institution', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        Institution
+      </a>
+    </li>
+    <li> 
+      <a href="<%= new_publication_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%= image('publication', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        Publication
+      </a>
+    </li>
+    <li> 
+      <a href="<%= new_document_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%= image('document', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        Document
+      </a>
+    </li>
+
     <% if Seek::Config.programmes_enabled && can_create_programmes? %>
         <li><%= link_to t('programme'), new_programme_path %></li>
     <% end %>
-    <% if can_create_projects? %>
+    <% if false %>
+        <%# if can_create_projects? %>
         <li><%= link_to t("project"), new_project_path %></li>
-    <% end %>
-    <% if can_create_institutions? %>
+        <%# end %>
+        <%# if can_create_institutions? %>
         <li><%= link_to "Institution", new_institution_path %></li>
-    <% end %>
+        <%# end %>
 	
-    <%# if can_create_new_items? %>
-    <li><%= link_to "Publication", new_publication_path %></li>
-    <li><%= link_to t("document"), new_document_path %></li>
-    <%# end %>
-    
+        <%# if can_create_new_items? %>
+        <li><%= link_to "Publication", new_publication_path %></li>
+        <li><%= link_to t("document"), new_document_path %></li>
+        <%# end %>
+    <% end %>
     <% if false %>
     <%# if can_create_new_items? %>
         <li><%= link_to "Profile", new_person_path %></li>
