--- a/app/views/layouts/navbar/_search_bar.html.erb
+++ b/app/views/layouts/navbar/_search_bar.html.erb
@@ -8,9 +8,11 @@
             <%= text_field_tag :q, @search_query, :class=>"form-control", :placeholder=>"Search here..." %>
             <div class="input-group-btn">
               <%= submit_tag "Search", :name => nil, :class => 'btn btn-default' -%>
-              <button id="adv-search-btn" data-tooltip="<%= tooltip('Click for more search options') -%>" type="button" class="btn btn-default" data-toggle="button" aria-pressed="false">
-                &nbsp;<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp;
-              </button>
+              <% if false %>
+                <button id="adv-search-btn" data-tooltip="<%= tooltip('Click for more search options') -%>" style="display:none;" type="button" class="btn btn-default" data-toggle="button" aria-pressed="false">
+                  &nbsp;<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp;
+                </button>
+	      <% end %>
             </div>
           </div>
 
