--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign up for <%= Seek::Config.application_name %></h1>
+<h2 style="color:#f9f9f9;">Sign up for <%= Seek::Config.application_name %></h2>
 
 
 <% if User.count == 0 -%>
