--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,4 +41,5 @@
 *= require eonasdan-bootstrap-datetimepicker
 *= require cytoscape_isa_graph
 *= require multi-step-wizard.css.erb
+*= require new_colors
 */
