--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -4,7 +4,8 @@
 <%= form_for(@document) do |f| %>
     <div class="asset_form">
       <%= f.error_messages %>
-
+  <div class="row">
+    <div class="col-md-6">
       <div class="form-group">
         <label class="required">Title</label>
         <%= f.text_field :title, :class=>"form-control" -%>
@@ -14,14 +15,16 @@
         <label>Description</label>
         <%= f.text_area :description, :class=>"form-control", :rows => 5 -%>
       </div>
-
+    </div>
+    <div class="col-md-6">
       <%# only the owner should get to see this option (ability to reload defaults remain in 'edit' action, and project selector was disabled) -%>
       <% if current_user_authorized_to_manage -%>
           <%= render :partial => "projects/project_selector", :locals => { :resource => @document, :allow_nil => Seek::Config.is_virtualliver } -%>
       <% end -%>
 
       <%= render :partial => 'assets/license_selector', :locals => { :resource => @document } %>
-
+    </div>
+  </div>
       <%# only the owner should be able to change sharing permissions -%>
       <% if current_user_authorized_to_manage -%>
           <%= render :partial=>"assets/asset_form_bottom", :locals=> {:taggable2=>false, :attribution_enable=>false, :show_publications=>false, :f => f}-%>
