--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -5,7 +5,8 @@
       <%= error_messages_for :document -%>
 
       <%= render :partial=>"assets/upload_box",:locals=>{:resource=>@document} -%>
-
+  <div class="row">
+    <div class="col-md-6">
       <div class="form-group">
         <label class="required">Title</label>
         <% document_title_value = (params[:document].blank? || params[:document][:title].blank?) ? nil : params[:document][:title] -%>
@@ -17,11 +18,13 @@
         <% document_description_value = (params[:document].blank? || params[:document][:description].blank?) ? nil : params[:document][:description] -%>
         <%= text_area_tag 'document[description]', document_description_value, :class=>"form-control" -%>
       </div>
-
+    </div>
+    <div class="col-md-6">
       <%= render :partial => "projects/project_selector", :locals => { :resource => @document, :allow_nil => Seek::Config.is_virtualliver } -%>
 
       <%= render :partial => 'assets/license_selector', :locals => { :resource => @document } %>
-
+    </div>
+  </div>
       <%= fields_for(@document) { |f| render :partial=>"assets/asset_form_bottom", :locals=> { :taggable2=>false, :attribution_enable=>false, :show_publications=>false, :f => f} }-%>
 
       <%#= render :partial => "assays/associate_assays", :locals=>{:resource => @document} -%>
