--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -2,6 +2,7 @@
                                                         :buttons_partial => 'assets/asset_buttons'} -%>
 
 <%= render :partial=>"assets/upload_new_version_form", :locals=>{:resource=>@document} -%>
+<%#= render :partial=>"assets/sharing_form", :locals=>{:object=>@document} if @document.can_manage? -%>
 
 <div class="row">
   <div class="col-md-9 col-sm-8 box_about_actor">
@@ -9,7 +10,7 @@
 
     <div class="row">
       <div class="col-md-6">
-        <%= persistent_resource_id(@display_document) %>
+        <%#= persistent_resource_id(@display_document) %>
 
         <%= render :partial => 'assets/fileinfo',:object=>@display_document.content_blob -%>
 
