--- a/app/views/publications/_buttons.html.erb
+++ b/app/views/publications/_buttons.html.erb
@@ -12,13 +12,20 @@
   <% end %>
 <% end %>
 
-<%= admin_dropdown do %>
-  <% if item.can_edit? -%>
-    <li><%= image_tag_for_key('manage', edit_publication_path(item), nil, nil, 'Manage Publication') -%></li>
-  <% end -%>
+<% if item.can_edit? -%>
+    <%= button_link_to('Manage Publication', 'manage', edit_publication_path(item)) -%>
+<% end %> 
+<% if item.can_delete? -%>
+    <%= button_link_to('Unregister', 'destroy', publication_path(item), { data: { confirm: 'This will unregister this publication with SEEK. Are you sure wish to do this?' }, :method => :delete }) -%>
+<% end %>
 
-  <% if item.can_delete? -%>
-    <li><%= image_tag_for_key('destroy', publication_path(item), nil,
+<% if false %> <%#= admin_dropdown do %>
+  <%# if item.can_edit? -%>
+    <li><%#= image_tag_for_key('manage', edit_publication_path(item), nil, nil, 'Manage Publication') -%></li>
+  <%# end -%>
+
+  <%# if item.can_delete? -%>
+    <li><%#= image_tag_for_key('destroy', publication_path(item), nil,
                               { data: { confirm: 'This will unregister this publication with SEEK. Are you sure wish to do this?' }, :method => :delete }, 'Unregister') -%></li>
-  <% end -%>
+  <%# end -%>
 <% end -%>
