--- a/app/assets/stylesheets/new_styles.scss
+++ b/app/assets/stylesheets/new_styles.scss
@@ -294,7 +294,7 @@ a.select_assay_class:hover {
 }
 
 .box_editing_inner {
-  @include rounded-box-inset-shadow(#F5F5F5);
+  @include rounded-box-inset-shadow(#EE8011);
   padding: 0.5em;
   margin-bottom: 1em;
 }
