--- a/app/views/layouts/navbar/_browse_menu_working_06-13.html.erb
+++ b/app/views/layouts/navbar/_browse_menu_working_06-13.html.erb
@@ -1,14 +1,14 @@
 <li class="dropdown" id="browse-menu">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-    <span class="hidden-md" style="color: white;">Discover</span>
+    <span class="hidden-md">Discover</span>
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu" style="width:150%;">
     <!-- <li role="presentation" class="dropdown-header visible-md">Browse</li>
     <li role="presentation" class="dropdown-header"><%# <%= t("menu.yellow_pages") - %></li>-->
     <li> 
-      <a style="color: #Ffba9b;" href="<%= projects_path %>">
+      <a href="<%= projects_path %>">
         <span style = "float:left; margin-right:5px;">
 	  <%= image('project', {height: "20", width: "20", class: "rounded"} ) -%>
 	</span>
@@ -16,7 +16,7 @@
       </a>
     </li>
     <li> 
-      <a style="color: #Ffba9b;" href="<%= institutions_path %>">
+      <a href="<%= institutions_path %>">
         <span style = "float:left; margin-right:5px;">
 	  <%= image('institution', {height: "20", width: "20", class: "rounded"} ) -%>
 	</span>
@@ -24,7 +24,7 @@
       </a>
     </li>
     <li> 
-      <a style="color: #Ffba9b;"  href="<%= people_path %>">
+      <a href="<%= people_path %>">
         <span style = "float:left; margin-right:5px;">
 	  <%= image('person', {height: "20", width: "20", class: "rounded"} ) -%>
 	</span>
@@ -32,7 +32,7 @@
       </a>
     </li>
     <li> 
-      <a style="color: #Ffba9b;" href="<%= publications_path %>">
+      <a href="<%= publications_path %>">
         <span style = "float:left; margin-right:5px;">
 	  <%= image('publication', {height: "20", width: "20", class: "rounded"} ) -%>
 	</span>
@@ -40,7 +40,7 @@
       </a>
     </li>
     <li> 
-      <a style="color: #Ffba9b;" href="<%= documents_path %>">
+      <a href="<%= documents_path %>">
         <span style = "float:left; margin-right:5px;">
 	  <%= image('document', {height: "20", width: "20", class: "rounded"} ) -%>
 	</span>
@@ -49,7 +49,7 @@
     </li>
     <li role="presentation" class="divider"></li>
     <li> 
-      <a style="color: #Ffba9b;" href="<%= new_advanced_search_path %>">
+      <a href="<%= new_advanced_search_path %>">
         <span style = "float:left; margin-right:5px;">
 	  <%= image('search', {height: "20", width: "20", class: "rounded"} ) -%>
 	</span>
