--- a/app/views/layouts/navbar/_search_bar.html.erb
+++ b/app/views/layouts/navbar/_search_bar.html.erb
@@ -5,7 +5,7 @@
         <div id="search_box">
 
           <div class="input-group">
-            <%= text_field_tag :q, @search_query, :class=>"form-control", :placeholder=>"Search here..." %>
+            <%= text_field_tag :q, @search_query, :class=>"form-control", :placeholder=>"Quick search..." %>
             <div class="input-group-btn">
               <%= submit_tag "Search", :name => nil, :class => 'btn btn-default' -%>
               <% if false %>
