--- a/app/views/gadgets/_sign_in_working-06-13.html.erb
+++ b/app/views/gadgets/_sign_in_working-06-13.html.erb
@@ -1,7 +1,7 @@
 <% unless logged_in_and_registered? -%>
     <div class="panel panel-default" id="login-panel">
       <div class="panel-heading">
-        <h4 class="panel-title" style="color: white;">
+        <h4 class="panel-title">
           Log in
         </h4>
       </div>
