--- a/app/assets/stylesheets/new_colors_working-z-index.css
+++ b/app/assets/stylesheets/new_colors_working-z-index.css
@@ -60,7 +60,7 @@ li:hover {
 }
 
 .form-control{ /* this references the search bar */ 
-  background-color: var(--secondary-bg-col);
+  background-color: #737e92;
   color: white;
   border-radius: 0px;
   border-bottom-left: 100px; 
