sign up color text fixed

--- a/app/assets/stylesheets/new_colors.css
+++ b/app/assets/stylesheets/new_colors.css
@@ -209,7 +209,7 @@ h4 {
 
 .alert-info{
   background-color: var(--accent-one);
-  color: var(--accent-two);
+  color:#a41f1f
   border: none;
   border-radius: 10px; 
 }
