--- a/app/assets/stylesheets/new_colors_working-z-index.css
+++ b/app/assets/stylesheets/new_colors_working-z-index.css
@@ -199,7 +199,7 @@ li:hover {
 
 .alert-info{
   background-color: var(--accent-one);
-  color: var(--accent-two);
+  color: #a41f1f;
   border: none;
   border-radius: 10px; 
 }
