--- a/app/views/gadgets/_sign_in.html.erb
+++ b/app/views/gadgets/_sign_in.html.erb
@@ -33,7 +33,7 @@
               <%= hidden_field_tag "called_from[id]", params[:id] -%>
 
               <div class="form-group">
-                <label>Login</label>
+                <label>Username/Email</label>
                 <%= text_field_tag 'login', nil, :class => 'form-control', :autofocus => true -%>
               </div>
 
